# chat_with_claude

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  MCP_SETUP.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  clear_db.py  indexer.py  mcp_server.py  pyproject.toml  setup.bat  test_search.py  to_delete  utils.py
documents/: example.md  my_info.txt
